foot and home components

--- a/blog/frontend/blog/src/app/home/home.component.html
+++ b/blog/frontend/blog/src/app/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row mt-5 mb-5">
+        <div class="col-md-12">
+            <h1 class="text-center"> Be welcome to my blog</h1>
+        </div>
+    </div>
+    <div class="row mb-5">
+        <div class="col-md-12">
+            <p class="text-center">Richard "Rick" Sanchez[2] is one of the two eponymous protagonists from the Adult Swim 
+                animated television series Rick and Morty. Created by Justin Roiland and Dan Harmon, 
+                Sanchez is a misanthropic alcoholic scientist inspired by Emmett "Doc" 
+                Brown from Back to the Future and Mister Fantastic from Marvel Comics. 
+                Known for his reckless, nihilistic behavior and pessimistic personality, 
+                the character has been well received</p>
+        </div>
+    </div>
+    
+    <div class="parallax"></div>
+
+    <div class="row mt-5 mb-5">
+        <div class="col-md-12 d-flex justify-content-center">
+            <button class="btn btn-outline-dark" routerLink='/feed'> Check feed</button>
+        </div>
+    </div>
+</div>
