feed, home, contato and footer implemented

--- a/blog/frontend/blog/src/app/contato/contato.component.html
+++ b/blog/frontend/blog/src/app/contato/contato.component.html
@@ -1,1 +1,18 @@
-<p>contato works!</p>
+<div class="container mb-5">
+    <h1 class="mt-5 mb-5 ">Contact us by</h1>
+ <form>
+     <div class="mb-3">
+       <label for="exampleFormControlInput1" class="form-label">Name</label>
+       <input type="text" class="form-control" id="name" placeholder="Your name here">
+     </div>
+    <div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+  </div>
+  <div class="mb-3">
+    <label for="exampleFormControlText" class="form-label">text here</label>
+    <textarea class="form-control" id="mensagem" rows="3"></textarea>
+  </div>
+  <button class="btn btn-outline-dark" routerLink='Send'>Send</button>
+</form>
+</div>
