--- a/blog/frontend/blog/src/app/feed/feed.component.html
+++ b/blog/frontend/blog/src/app/feed/feed.component.html
@@ -1,1 +1,53 @@
-<p>feed works!</p>
+<div class="container">
+    <div class="row mt-5 mb-5">
+        <div class="col-md-4">
+            <div class="card border-0" style="width: 18rem;">
+                <div class="d-flex justify-content-center"><img src="./../../assets/106c202ee5011502d18956d0989699ee.jpg" class="card-img-top rounded-circle w-75 " alt="Perfil photo">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title text-center">Rick Sanchez</h5>
+                  <p class="card-text text-center">Scientist and Inventor</p>
+                  <a href="https://github.com/FabianoCarregas" target="_blank" class="btn btn-outline-dark d-flex justify-content-center">GitHub</a>
+                <hr class="mt-4 mb-4 ">
+                <h6 class="md-3 text-monospace text-center"> Title search</h6>
+                <input type="text" class="form-control mb-3 w-100">
+                <button class="btn btn-outline-warning w-100"> Search </button>
+
+                </div>
+              </div>
+        </div>
+        <div class="col-md-8">
+            <div>
+                <h3 class="text-center mb-4 text-monospace">Your comments right below</h3>
+
+                <div class="form-group">
+                    <label for="title" class="text-monospace">Name:</label>
+                    <input type="text" name="nome" id="nome" class="form-control mb-4 mt-2" placeholder="Your name: "[(ngModel)]='post.nome'>
+                </div>
+                <div class="form-group">
+                    <label for="mensagem" class="text-monospace">Message:</label>
+                    <textarea name="mensagem" id="mensagem" cols="30" rows="4" class="form-control mt-2" 
+                      placeholder="Your message" [(ngModel)]='post.mensagem'></textarea>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-outline-info w-25 mt-3" (click)='cadastrarMensagem()'>Post</button>
+                </div>
+            </div>
+            <hr class="mt-5 mb-5">
+
+            <h3 class="text-center mb-5 text-monospace">Coments</h3>
+            <div class="container">
+                <div class="card mb-4" *ngFor="let post of listPost" >
+                    <div class="card-header">
+                        <h5 class="card.title">{{post.id}}</h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">{{post.nome}}</p>
+                        <p class="card-text">{{post.mensagem}}</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
